--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-polyfill": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "coordtransform": "^2.1.2",
     "element-ui": "^1.4.1",
     "vue": "^2.3.3",
+    "vue-cookies": "^1.5.4",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
   },
